fix width and height on mobile

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 	grid-template-columns: 100vw;
 }
 
-.button {
+.button{
 	background-color: #7289da;
 	border: none;
 	border-radius: 3px;
@@ -22,8 +22,9 @@ body{
 }
 
 .container{
+	box-sizing: border-box;
 	background-color: #2c2f33;
-	width: 300px;
+	width: 100%;
 	padding: 50px;
 	text-align: center;
 	justify-self: center;
